[project]
name = "rust_cli"
version = "0.1.0"
authors = ["Kishorekumar Neelamegam <nkishore@megam.io>"]
description = """
A mixin for creating command line applications - gives an easy interface for argument specification and processing used by https://www.megam.io
https://www.megam.io.
An implementation using rust_cli can be found at https://github.com/megamsys/meg.git
"""

documentation = "https://github.com/megamsys/rust_cli"
homepage = "https://www.megam.io"
repository = "https://github.com/megamsys/rust_cli"

readme = "README.md"

keywords = ["cli", "command", "megam", "mixin_cli"]

license = "Apache-2.0"

[lib]
name = "turbo"
path = "src/turbo/lib.rs"

[dependencies]
glob = "0.2.10"
time = "0.1.25"
log = "0.3.1"
env_logger = "0.3.1"
docopt = "0.6.64"
rustc-serialize = "0.3.14"
term = "0.2.7"
regex = "0.1.30"
libc = "0.1.8"


[dev-dependencies]
tempdir = "0.3.4"

#[dependencies.hamcrest]
#git = "https://github.com/carllerche/hamcrest-rust.git"

[[test]]
name = "tests"
